@@ -37,7 +37,7 @@ application/msword
 
 application/octet-stream
 	can_be_executable=TRUE
-	_description=unknown type
+	_description=Unknown type
 
 application/oda
 	_description=ODA document
@@ -318,12 +318,11 @@ application/x-abiword
 	use_category_default=yes
 
 application/x-ape
-        _description=Monkey Media lossless codec
-        default_action_type=application
-        short_list_application_ids_for_intermediate_user_level=gst-player
-        _category=audio
-        use_category_default=yes
-
+	_description=Monkey audio
+	default_action_type=application
+	short_list_application_ids_for_intermediate_user_level=gst-player
+	use_category_default=yes
+	_category=Audio
 
 application/x-applix-spreadsheet
 	_description=Applixware spreadsheet
@@ -344,7 +343,7 @@ application/x-applix-word
 	use_category_default=no
 
 application/x-arj
-	_description=arj archive
+	_description=ARJ archive
 	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -354,11 +353,11 @@ application/x-arj
 	use_category_default=yes
 
 application/x-asp
-	_description=active server page
+	_description=Active Server page
 	_category=Software Development/Source Code
 
 application/x-backup
-	_description=backup file
+	_description=Backup file
 	_category=Packages
 
 application/x-bcpio
@@ -366,7 +365,7 @@ application/x-bcpio
 	_category=Packages
 
 application/x-bzip
-	_description=bzip-compressed file
+	_description=Bzip2 compressed file
 	vfs_method=bzip2
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -376,7 +375,7 @@ application/x-bzip
 	use_category_default=yes
 
 application/x-bzip-compressed-tar
-	_description=tar archive (bzip2-compressed)
+	_description=Tar archive (Bzip2-compressed)
 	icon_filename=gnome-compressed
 	vfs_method=bzip2
 	default_action_type=application
@@ -401,7 +400,7 @@ application/x-class-file
 
 # we are aware of the crappiness of this description
 application/x-compress
-	_description=compress-compressed file
+	_description=Compress-compressed file
 	icon_filename=gnome-compressed
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -411,7 +410,7 @@ application/x-compress
 	use_category_default=yes
 
 application/x-compressed-tar
-	_description=tar archive (gzip-compressed)
+	_description=Tar archive (Gzip-compressed)
 	icon_filename=gnome-package
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -421,7 +420,7 @@ application/x-compressed-tar
 	use_category_default=yes
 
 application/x-core-file
-	_description=memory dump
+	_description=Memory dump
 	icon_filename=i-core
 	_category=Software Development
 
@@ -430,7 +429,7 @@ application/x-cpio
 	_category=Packages
 
 application/x-cpio-compressed
-	_description=CPIO archive (gzip-compressed)
+	_description=CPIO archive (Gzip-compressed)
 	icon_filename=gnome-compressed
 	_category=Packages
 
@@ -441,7 +440,7 @@ application/x-csh
 	_category=Software Development/Source Code
 
 application/x-dc-rom
-	_description=Dreamcast rom
+	_description=Dreamcast ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
@@ -476,7 +475,7 @@ application/x-e-theme
 
 application/x-executable-binary
 	can_be_executable=TRUE
-	_description=binary program
+	_description=Binary program
 
 application/x-flac
 	_description=FLAC audio
@@ -551,12 +550,12 @@ application/x-font-vfont
 	_category=User Interface/Fonts
 
 application/x-gameboy-rom
-	_description=Game Boy rom
+	_description=Game Boy ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
 application/x-genesis-rom
-	_description=Genesis rom
+	_description=Genesis ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
@@ -574,15 +573,15 @@ application/x-gmc-link
 	_category=User Interface
 
 application/x-gnome-app-info
-	_description=application launcher
+	_description=Application launcher
 	_category=User Interface
 
 application/x-gnome-theme
-	_description=GNOME theme package
+	_description=Gnome theme
 	_category=User Interface
 
 application/x-gnucash
-	_description=GnuCash Workbook
+	_description=GnuCash workbook
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnucash
 	short_list_application_ids_for_intermediate_user_level=gnucash
@@ -603,7 +602,7 @@ application/x-gnumeric
 	use_category_default=yes
 
 application/x-gtar
-	_description=gtar archive
+	_description=Gtar archive
 	icon_filename=gnome-package
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -621,7 +620,7 @@ application/x-gtktalog
 	_category=Packages
 
 application/x-gzip
-	_description=gzip-compressed file
+	_description=Gzip-compressed file
 	vfs_method=gzip
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=file-roller,guitar
@@ -635,20 +634,20 @@ application/x-hdf
 	_category=Documents/Numeric
 
 application/x-ipod-firmware
-	_description=Apple ipod firmware
-	_category=Software Development/ROM image
+	_description=iPod software
+	_category=Audio
 
 application/x-iso-image
 	_description=ISO image
+
+application/x-java-archive
+	_description=Java code archive
+	_category=Software Development
 
 # also application/x-class-file
 application/x-java-byte-code
 	_description=Java byte code
 	_category=Software Development
-
-application/x-java-archive
-        _description=Java jar archive
-        _category=Packages
 
 application/x-jbuilder-project
 	_description=JBuilder Project
@@ -736,12 +735,12 @@ application/x-ms-dos-executable
 	_description=DOS/Windows program
 
 application/x-msx-rom
-	_description=MSX rom
+	_description=MSX ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
 application/x-n64-rom
-	_description=Nintendo64 rom
+	_description=Nintendo64 ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
@@ -750,7 +749,7 @@ application/x-nautilus-link
 	_category=User Interface
 
 application/x-nes-rom
-	_description=NES rom
+	_description=NES ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
@@ -759,12 +758,12 @@ application/x-netcdf
 	_category=Documents/Numeric
 
 application/x-object-file
-	_description=object code
+	_description=Object code
 	icon_filename=gnome-objectfile
 	_category=Software Development
 
 application/x-ogg
-	_description=ogg audio
+	_description=Ogg audio
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms,freeamp
 	short_list_application_ids_for_intermediate_user_level=xmms,freeamp
@@ -801,11 +800,11 @@ application/x-php
 	_category=Software Development/Source Code
 
 application/x-profile
-	_description=profiler results
+	_description=Profiler results
 	_category=Software Development
 
 application/x-python-byte-code
-	_description=python byte code
+	_description=Python byte code
 	_category=Software Development
 
 application/x-qw
@@ -839,7 +838,7 @@ application/x-rar-compressed
 	use_category_default=yes
 
 application/x-reject
-	_description=rejected patch file
+	_description=Rejected patch file
 	_category=Software Development/Source Code
 
 application/x-rpm
@@ -849,16 +848,16 @@ application/x-rpm
 	use_category_default=yes
 
 application/x-shar
-	_description=shell archive
+	_description=Shell archive
 	_category=Packages
 
 application/x-shared-library
-	_description=shared library
+	_description=Shared library
 	icon_filename=gnome-library
 	_category=System
 
 application/x-shared-library-la
-	_description=shared library
+	_description=Shared library
 	icon_filename=gnome-library
 	_category=System
 
@@ -875,7 +874,7 @@ application/x-smil
 	_category=Documents
 
 application/x-sms-rom
-	_description=SMS or Game Gear rom
+	_description=Master System or Game Gear ROM
 	_category=Software Development/ROM Images
 	use_category_default=yes
 
@@ -892,7 +891,7 @@ application/x-sv4crc
 	_category=Packages
 
 application/x-tar
-	_description=tar archive
+	_description=Tar archive
 	icon_filename=gnome-package
 	vfs_method=tar
 	default_action_type=application
@@ -908,7 +907,7 @@ application/x-tex
 	_category=Documents/Text Markup
 
 application/x-theme
-	_description=theme
+	_description=Theme
 	_category=User Interface
 
 application/x-toutdoux
@@ -917,20 +916,20 @@ application/x-toutdoux
 
 # also text/x-troff
 application/x-troff
-	_description=troff document
+	_description=Troff document
 	_category=Documents/Text Markup
 
 application/x-troff-man-compressed
-	_description=manual page (compressed)
+	_description=Manual page (compressed)
 	icon_filename=i-manual
 	_category=Documents/Text Markup
 
 application/x-unix-archive
-	_description=ar archive
+	_description=Ar archive
 	_category=Packages
 
 application/x-ustar
-	_description=ustar archive
+	_description=Ustar archive
 	_category=Packages
 
 application/x-wais-source
@@ -952,11 +951,11 @@ application/x-xbase
 	use_category_default=yes
 
 application/x-zoo
-	_description=zoo archive
+	_description=Zoo archive
 	_category=Packages
 
 application/zip
-	_description=zip archive
+	_description=Zip archive
 	icon_filename=gnome-compressed
 	vfs_method=zip
 	default_action_type=application
@@ -976,7 +975,7 @@ audio/ac3
 	_category=Audio
 
 audio/basic
-	_description=basic audio
+	_description=Basic audio
 	icon_filename=gnome-audio
 	_category=Audio
 
@@ -991,7 +990,7 @@ audio/mpeg
 	_category=Audio
 
 audio/prs.sid
-	_description=Commodore 64 Audio
+	_description=Commodore 64 audio
 	icon_filename=i-music
 	_category=Audio
 
@@ -1108,7 +1107,7 @@ audio/x-s3m
 	_category=Audio
 
 audio/x-scpls
-	_description=SHOUTcast Playlist
+	_description=SHOUTcast playlist
 	icon_filename=i-music
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=xmms-no-uris,freeamp-no-uris
@@ -1137,7 +1136,7 @@ audio/x-voc
 	_category=Audio
 
 audio/x-wav
-	_description=wave audio
+	_description=Wave audio
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=grecord,xmms,freeamp
 	short_list_application_ids_for_intermediate_user_level=grecord,xmms,freeamp
@@ -1276,7 +1275,7 @@ image/x-cmu-raster
 	_category=Images
 
 image/x-compressed-xcf
-	_description=compressed GIMP document
+	_description=Compressed GIMP document
 	short_list_application_ids_for_novice_user_level=gimp
 	short_list_application_ids_for_intermediate_user_level=gimp
 	short_list_application_ids_for_advanced_user_level=gimp
@@ -1292,7 +1291,7 @@ image/x-dib
 	_category=Images
 
 image/x-dpx
-	_description=Digital Moving Picture Exchange
+	_description=Digital Moving Picture Exchange image
 	_category=Images
 
 image/x-emf
@@ -1462,7 +1461,7 @@ image/x-rgb
 	_category=Images
 
 image/x-sgi
-	_description=Silicon Graphics Image
+	_description=Silicon Graphics image
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gimp
 	short_list_application_ids_for_intermediate_user_level=gimp
@@ -1540,15 +1539,15 @@ image/x-xwindowdump
 	_category=Images
 
 message/delivery-status
-	_description=mail delivery report
+	_description=Mail delivery report
 	_category=Message
 
 message/disposition-notification
-	_description=mail disposition report
+	_description=Mail disposition report
 	_category=Message
 
 message/external-body
-	_description=reference to remote file
+	_description=Reference to remote file
 	_category=Message
 
 message/news
@@ -1556,11 +1555,11 @@ message/news
 	_category=Message
 
 message/partial
-	_description=partial email message
+	_description=Partial email message
 	_category=Message
 
 message/rfc822
-	_description=email message/mailbox
+	_description=Email message/mailbox
 	_category=Message
 
 message/x-gnu-rmail
@@ -1572,34 +1571,34 @@ model/vrml
 	_category=Documents/Vector Graphics
 
 multipart/alternative
-	_description=message in several formats
+	_description=Message in several formats
 
 multipart/appledouble
 	_description=Macintosh AppleDouble-encoded file
 	_category=Packages
 
 multipart/digest
-	_description=message digest
+	_description=Message digest
 	_category=Message
 
 multipart/encrypted
-	_description=encrypted message
+	_description=Encrypted message
 	_category=Message
 
 multipart/mixed
-	_description=multi-part message
+	_description=Multi-part message
 	_category=Message
 
 multipart/related
-	_description=compound document
+	_description=Compound document
 	_category=Message
 
 multipart/report
-	_description=mail system report
+	_description=Mail system report
 	_category=Message
 
 multipart/signed
-	_description=signed message
+	_description=Signed message
 	_category=Message
 
 text/*
@@ -1624,23 +1623,23 @@ text/abiword
 	use_category_default=yes
 
 text/bib
-	_description=bibliography record
+	_description=Bibliography record
 	_category=Documents/Plain Text
 
 text/calendar
-	_description=calendar file
+	_description=Calendar file
 	_category=Information/Calendar
 
 text/css
-	_description=style sheet
+	_description=Style sheet
 	_category=Documents/World Wide Web
 
 text/directory
-	_description=directory information file
+	_description=Directory information file
 	_category=Documents/Plain Text
 
 text/enriched
-	_description=enriched text document
+	_description=Enriched text document
 	_category=Documents/Word Processor
 
 text/html
@@ -1657,7 +1656,7 @@ text/html
 	use_category_default=yes
 
 text/htmlh
-	_description=help page
+	_description=Help page
 	default_action_type=component
 	short_list_component_iids=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1
@@ -1672,7 +1671,7 @@ text/mathml
 
 text/plain
 	can_be_executable=TRUE
-	_description=plain text document
+	_description=Plain text document
 	default_action_type=component
 	short_list_component_iids=OAFIID:Nautilus_Text_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_text_view:fa466311-17c1-435c-8231-c9fc434b6437
@@ -1685,11 +1684,11 @@ text/plain
 	use_category_default=yes
 
 text/rfc822-headers
-	_description=email headers
+	_description=Email headers
 	_category=Message
 
 text/richtext
-	_description=rich text document
+	_description=Rich text document
 	_category=Documents/Word Processor
 
 text/sgml
@@ -1707,7 +1706,7 @@ text/spreadsheet
 	use_category_default=yes
 
 text/tab-separated-values
-	_description=tab-separated text document
+	_description=Tab-separated text document
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric
 	short_list_application_ids_for_intermediate_user_level=gnumeric
@@ -1721,12 +1720,13 @@ text/tab-separated-values
 text/tex
 	_description=TeX document
 	_category=Documents/Text Markup
+
 text/x-asm
-	_description=Assembler Code
-	_category=Assembler source code
+	_description=Assembly source code
+	_category=Software Development/Source Code
 
 text/x-authors
-	_description=authors list
+	_description=Authors list
 	_category=Documents/Plain Text
 
 text/x-c
@@ -1742,7 +1742,7 @@ text/x-c-header
 	_description=C source code header
 
 text/x-comma-separated-values
-	_description=comma-separated text document
+	_description=Comma-separated text document
 	icon_filename=i-spreadsheet
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnumeric,kspread
@@ -1752,11 +1752,11 @@ text/x-comma-separated-values
 	use_category_default=yes
 
 text/x-copying
-	_description=software license terms
+	_description=Software license terms
 	_category=Software Development
 
 text/x-credits
-	_description=software author credits
+	_description=Software author credits
 	_category=Software Development
 
 # also application/x-csh
@@ -1774,7 +1774,7 @@ text/x-dsl
 	_category=Documents/Text Markup
 
 text/x-dtd
-	_description=document type definition
+	_description=Document type definition
 	_category=Documents/Extended Markup Language (XML)
 
 text/x-emacs-lisp
@@ -1799,7 +1799,7 @@ text/x-idl
 	_category=Software Development/Source Code
 
 text/x-install
-	_description=software installation instructions
+	_description=Software installation instructions
 	_category=Software Development/Source Code
 
 text/x-java
@@ -1822,7 +1822,7 @@ text/x-literate-haskell
 	_category=Software Development/Source Code
 
 text/x-lyx
-	_description=LyX Document
+	_description=LyX document
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=lyx
 	short_list_application_ids_for_intermediate_user_level=lyx
@@ -1830,7 +1830,7 @@ text/x-lyx
 	_category=Documents/Word Processor
 
 text/x-makefile
-	_description=makefile
+	_description=Makefile
 	_category=Software Development
 
 text/x-pascal
@@ -1838,7 +1838,7 @@ text/x-pascal
 	_category=Software Development/Source Code
 
 text/x-patch
-	_description=source code patch
+	_description=Source code patch
 	_category=Software Development
 
 # also application/x-perl
@@ -1866,7 +1866,7 @@ text/x-setext
 
 text/x-sh
 	can_be_executable=TRUE
-	_description=shell script
+	_description=Shell script
 	_category=Software Development/Source Code
 
 text/x-speech
@@ -1893,29 +1893,29 @@ text/x-texinfo
 
 # also application/x-troff
 text/x-troff
-	_description=troff document
+	_description=Troff document
 	_category=Documents/Text Markup
 
 text/x-troff-man
-	_description=manual page
+	_description=Manual page
 	icon_filename=i-manual
 	_category=Documents/Text Markup
 
 # the acronym is not capitalized, per common usage
 text/x-troff-me
-	_description=troff me input document
+	_description=Troff me input document
 	_category=Documents/Text Markup
 
 text/x-troff-mm
-	_description=troff mm input document
+	_description=Troff mm input document
 	_category=Documents/Text Markup
 
 text/x-troff-ms
-	_description=troff ms input document
+	_description=Troff ms input document
 	_category=Documents/Text Markup
 
 text/x-vcalendar
-	_description=calendar or event document
+	_description=Calendar or event document
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnomecal
 	short_list_application_ids_for_intermediate_user_level=gnomecal
@@ -1923,21 +1923,21 @@ text/x-vcalendar
 	_category=Information/Calendar
 
 text/x-vcard
-	_description=address card
+	_description=Address card
 	default_action_type=application
 	short_list_application_ids_for_novice_user_level=gnomecard
 	short_list_application_ids_for_intermediate_user_level=gnomecard
 	short_list_application_ids_for_advanced_user_level=gnomecard
 	_category=Information
 
+text/x-yacc
+	_description=Yacc grammar source code
+	_category=Software Development/Source Code
+
 text/x-zsh
 	can_be_executable=TRUE
 	_description=Z shell script
 	_category=Software Development/Source Code
-
-text/x-yacc
-        _description=Yacc source file
-        _category=Software Development/Source
 
 text/xml
 	_description=XML document
@@ -2055,7 +2055,7 @@ video/x-sgi-movie
 	_category=Video
 
 x-directory/normal
-	_description=folder
+	_description=Folder
 	default_action_type=component
 	short_list_component_iids=OAFIID:Nautilus_File_Manager_Icon_View,OAFIID:Nautilus_File_Manager_List_View,OAFIID:Nautilus_Music_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391:OAFIID
@@ -2064,7 +2064,7 @@ x-directory/normal
 	_category=Information
 
 x-directory/search
-	_description=search results
+	_description=Search results
 	default_action_type=component
 	short_list_component_iids=OAFIID:Nautilus_File_Manager_Search_List_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_file_manager_search_list_view:b186e381-198e-43cf-9c46-60b6bb35db0b
@@ -2073,7 +2073,7 @@ x-directory/search
 	_category=Information
 
 x-directory/vfolder-desktop
-	_description=folder
+	_description=Folder
 	default_action_type=component
 	short_list_component_iids=OAFIID:Nautilus_File_Manager_Icon_View,OAFIID:Nautilus_File_Manager_List_View,OAFIID:Nautilus_Music_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391:OAFIID
@@ -2081,7 +2081,7 @@ x-directory/vfolder-desktop
 	short_list_component_iids_for_advanced_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391
 
 x-directory/webdav
-	_description=web folder
+	_description=Web folder
 	default_action_type=component
 	short_list_component_iids=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:Nautilus_File_Manager_Icon_View,OAFIID:Nautilus_File_Manager_List_View,OAFIID:Nautilus_Music_View,OAFIID:Nautilus_Text_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391,OAFIID:nautilus_text_view:fa466311-17c1-435c-8231-c9fc434b6437
@@ -2100,7 +2100,7 @@ x-directory/webdav
 #
 
 x-directory/webdav-prefer-directory
-	_description=web folder
+	_description=Web folder
 	default_action_type=component
 	short_list_component_iids=OAFIID:Nautilus_File_Manager_Icon_View,OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:Nautilus_File_Manager_List_View,OAFIID:Nautilus_Music_View,OAFIID:Nautilus_Text_View
 	short_list_component_iids_for_novice_user_level=OAFIID:nautilus_file_manager_icon_view:42681b21-d5ca-4837-87d2-394d88ecc058,OAFIID:nautilus_mozilla_content_view:1ee70717-57bf-4079-aae5-922abdd576b1,OAFIID:nautilus_file_manager_list_view:521e489d-0662-4ad7-ac3a-832deabe111c,OAFIID:nautilus_music_view:9456b5d2-60a8-407f-a56e-d561e1821391,OAFIID:nautilus_text_view:fa466311-17c1-435c-8231-c9fc434b6437
@@ -2112,25 +2112,25 @@ x-directory/webdav-prefer-directory
 	_category=System
 
 x-special/device-block
-	_description=block device
+	_description=Block device
 	icon_filename=i-harddisk
 	_category=System
 
 x-special/device-char
-	_description=character device
+	_description=Character device
 	icon_filename=i-chardev
 	_category=System
 
 x-special/fifo
-	_description=named pipe
+	_description=Named pipe
 	icon_filename=i-fifo
 	_category=System
 
 x-special/socket
-	_description=socket
+	_description=Socket
 	icon_filename=i-sock
 	_category=System
 
 x-special/symlink
-	_description=symbolic link
+	_description=Symbolic link
 	_category=System
